--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -14,7 +14,7 @@ archer:
   activated: true
   activated_at: <%= Time.zone.now %>
   
-lane:
+lana:
   name: Lana Kane
   email: hands@example.gov
   password_digest: <%= User.digest('password') %>
